--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="542dp"
+        android:layout_height="549dp"
         android:layout_marginTop="131dp">
 
         <LinearLayout
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/alfa_slab_one"
                 android:text="Today"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <!-- Horizontal ScrollView for cards -->
 
@@ -120,7 +120,7 @@
                                 android:layout_marginBottom="8dp"
                                 android:gravity="center"
                                 android:text="No task assigned"
-                                android:textSize="18sp" />
+                                android:textSize="15sp" />
 
                             <ImageView
                                 android:layout_width="match_parent"
@@ -151,7 +151,7 @@
                                 android:layout_height="135dp"
                                 android:gravity="center"
                                 android:text="No task assigned"
-                                android:textSize="18sp"
+                                android:textSize="15sp"
                                 android:layout_marginTop="8dp"
                                 android:layout_marginBottom="8dp" />
 
@@ -187,7 +187,7 @@
                                 android:gravity="center"
                                 android:text="No task assigned"
                                 android:textColor="#F8F4F4"
-                                android:textSize="18sp" />
+                                android:textSize="15sp" />
 
                             <ImageView
                                 android:layout_width="match_parent"
@@ -207,7 +207,7 @@
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/alfa_slab_one"
                 android:text="Announcements"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card9"
@@ -253,7 +253,7 @@
                 android:layout_marginTop="25dp"
                 android:fontFamily="@font/alfa_slab_one"
                 android:text="This Week"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card10"
@@ -330,58 +330,54 @@
     </ScrollView>
 
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card2"
-        style="?attr/materialCardViewFilledStyle"
-        android:layout_width="420dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="675dp"
-        app:cardBackgroundColor="@color/neutral"
-        >
+        android:layout_gravity="bottom"
+        android:layout_marginTop="680dp"
+        android:background="@color/neutral"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/task"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/task"/>
 
-            <ImageView
-                android:id="@+id/task"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="33dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/task" />
+        <ImageView
+            android:id="@+id/calendar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/calendar"/>
 
-            <ImageView
-                android:id="@+id/calendar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/calendar" />
+        <ImageView
+            android:id="@+id/bell"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/bell"/>
 
-            <ImageView
-                android:id="@+id/bell"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/bell" />
-
-            <ImageView
-                android:id="@+id/user"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/user" />
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
+        <ImageView
+            android:id="@+id/user"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/user"/>
+    </LinearLayout>
 
 </RelativeLayout>
