--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -28,7 +28,7 @@
             android:layout_marginLeft="20dp"
             android:fontFamily="@font/alfa_slab_one"
             android:text="Notifications"
-            android:textSize="29sp"/>
+            android:textSize="25sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,7 +50,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_marginTop="130dp"
-        android:layout_height="543dp"
+        android:layout_height="549dp"
         tools:context=".NotificationsActivity">
 
         <!-- Spinner for selecting recipient -->
@@ -116,55 +116,54 @@
 
 
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card2"
-        style="?attr/materialCardViewFilledStyle"
-        android:layout_width="420dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="675dp"
-        app:cardBackgroundColor="@color/neutral">
+        android:layout_gravity="bottom"
+        android:layout_marginTop="680dp"
+        android:background="@color/neutral"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/task"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/task"/>
 
-            <ImageView
-                android:id="@+id/task"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="33dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/task"/>
+        <ImageView
+            android:id="@+id/calendar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/calendar"/>
 
-            <ImageView
-                android:id="@+id/calendar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/calendar"/>
+        <ImageView
+            android:id="@+id/bell"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/bell"/>
 
-            <ImageView
-                android:id="@+id/bell"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/bell"/>
-
-            <ImageView
-                android:id="@+id/user"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/user"/>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        <ImageView
+            android:id="@+id/user"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/user"/>
+    </LinearLayout>
 
 </RelativeLayout>
