--- a/app/src/main/res/layout/activity_taskmanager.xml
+++ b/app/src/main/res/layout/activity_taskmanager.xml
@@ -32,7 +32,7 @@
             android:layout_marginLeft="20dp"
             android:fontFamily="@font/alfa_slab_one"
             android:text="Manage Tasks"
-            android:textSize="24sp" />
+            android:textSize="25sp" />
 
 
 
@@ -56,7 +56,7 @@
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="564dp"
+    android:layout_height="568dp"
     android:layout_marginTop="110dp"
     android:background="@color/neutral"
     android:padding="3dp">
@@ -153,7 +153,7 @@
         <ImageView
             android:layout_marginLeft="45dp"
             android:layout_width="100dp"
-            android:layout_height="105dp"
+            android:layout_height="100dp"
             android:layout_marginTop="16dp"
             android:contentDescription="Status"
             android:src="@drawable/shuttle" />
@@ -161,7 +161,7 @@
         <ImageView
             android:layout_marginLeft="235dp"
             android:layout_width="100dp"
-            android:layout_height="105dp"
+            android:layout_height="100dp"
             android:layout_marginTop="16dp"
             android:contentDescription="Status"
             android:src="@drawable/gears" />
@@ -200,7 +200,7 @@
             <ImageView
                 android:layout_marginLeft="45dp"
                 android:layout_width="100dp"
-                android:layout_height="105dp"
+                android:layout_height="100dp"
                 android:layout_marginTop="16dp"
                 android:contentDescription="Status"
                 android:src="@drawable/time" />
@@ -208,7 +208,7 @@
             <ImageView
                 android:layout_marginLeft="235dp"
                 android:layout_width="100dp"
-                android:layout_height="105dp"
+                android:layout_height="100dp"
                 android:layout_marginTop="16dp"
                 android:contentDescription="Status"
                 android:src="@drawable/file" />
@@ -245,58 +245,57 @@
     </LinearLayout>
 </ScrollView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card2"
-        style="?attr/materialCardViewFilledStyle"
-        android:layout_width="420dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="675dp"
-        app:cardBackgroundColor="@color/neutral"
-        >
+        android:layout_gravity="bottom"
+        android:layout_marginTop="680dp"
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        android:background="@color/neutral"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-            <ImageView
-                android:id="@+id/task"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="33dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/task" />
+        <ImageView
+            android:id="@+id/task"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/task"/>
 
-            <ImageView
-                android:id="@+id/calendar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/calendar" />
+        <ImageView
+            android:id="@+id/calendar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/calendar"/>
 
-            <ImageView
-                android:id="@+id/bell"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/bell" />
+        <ImageView
+            android:id="@+id/bell"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/bell"/>
 
-            <ImageView
-                android:id="@+id/user"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/user" />
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/user"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/user"/>
+    </LinearLayout>
 
-    </com.google.android.material.card.MaterialCardView>
 
 
 </RelativeLayout>
